crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_Bad_override_of_a_sy…_(b723f1988e2e7bf2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: liskov.md - The Liskov Substitution Principle - Bad override of a synthesized method
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## mdtest_snippet.pyi

```
 1 | from dataclasses import dataclass
 2 | from typing import NamedTuple
 3 | 
 4 | @dataclass(order=True)
 5 | class Foo:
 6 |     x: int
 7 | 
 8 | class Bar(Foo):
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
10 | 
11 | class Baz(NamedTuple):
12 |     x: int
13 | 
14 | class Spam(Baz):
15 |     def _asdict(self) -> tuple[int, ...]: ...  # error: [invalid-method-override]
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `__lt__`
  --> src/mdtest_snippet.pyi:9:9
   |
 8 | class Bar(Foo):
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Foo.__lt__`
10 |
11 | class Baz(NamedTuple):
   |
info: This violates the Liskov Substitution Principle
info: `Foo.__lt__` is a generated method created because `Foo` is a dataclass
 --> src/mdtest_snippet.pyi:5:7
  |
4 | @dataclass(order=True)
5 | class Foo:
  |       ^^^ Definition of `Foo`
6 |     x: int
  |
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `_asdict`
  --> src/mdtest_snippet.pyi:15:9
   |
14 | class Spam(Baz):
15 |     def _asdict(self) -> tuple[int, ...]: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Baz._asdict`
   |
info: This violates the Liskov Substitution Principle
info: `Baz._asdict` is a generated method created because `Baz` inherits from `typing.NamedTuple`
  --> src/mdtest_snippet.pyi:11:7
   |
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
10 |
11 | class Baz(NamedTuple):
   |       ^^^^^^^^^^^^^^^ Definition of `Baz`
12 |     x: int
   |
info: rule `invalid-method-override` is enabled by default

```
